[package]
name = "rust_etherium"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.26"
ethers = { version = "2.0.14", default-features = false }
eyre = "0.6.12"
full = "0.3.0"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "transact"
path="src/simple_transactions.rs"


