[package]
name = "rust_etherium"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.26"
ethers = "2.0.14"  # Ensure this is the latest version
ethers-contract = "2.0.14"
ethers-core = "2.0.14"
ethers-solc = "2.0.14"
eyre = "0.6.12"
full = "0.3.0"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "transact"
path="src/simple_transactions.rs"

[[bin]]
name = "deploy"
path="src/contract_deploy.rs"
